tests/ui/write_session_no_copy.stderr
error[E0277]: the trait bound `WriteSession: Copy` is not satisfied
  --> tests/ui/write_session_no_copy.rs:14:18
   |
14 |     require_copy(&session);
   |     ------------ ^^^^^^^^ the trait `Copy` is not implemented for `WriteSession`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `require_copy`
  --> tests/ui/write_session_no_copy.rs:10:20
   |
10 | fn require_copy<T: Copy>(_: &T) {}
   |                    ^^^^ required by this bound in `require_copy`
